--- a/motor_node/CMakeLists.txt
+++ b/motor_node/CMakeLists.txt
@@ -5,12 +5,14 @@ find_package(catkin REQUIRED COMPONENTS
     roscpp
     std_msgs
     sensor_msgs
+    geometry_msgs
 )
 
 catkin_package(CATKIN_DEPENDS
     roscpp
     std_msgs
     sensor_msgs
+    geometry_msgs
 )
 
 include_directories(
