mod: Project name macro.

--- a/motor_node/CMakeLists.txt
+++ b/motor_node/CMakeLists.txt
@@ -24,9 +24,11 @@ add_compile_options(
     -std=c++11
 )
 
-add_executable(motor_node
+add_executable(${PROJECT_NAME}
     src/motor_node.cpp
     src/gpio.cpp
     src/motor.cpp
 )
-target_link_libraries(motor_node ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+)
